<resources>
    <string name="app_name">Cater</string>
    <string name="nav_header_title">User_name</string>
    <string name="nav_header_subtitle">User_description</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_map">Map</string>
    <string name="menu_me">Me</string>
</resources>