<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021.   # COMP 4521 #
  ~ # SHEN, Ye #	 20583137	yshenat@connect.ust.hk
  ~ # ZHOU, Ji #	 20583761	jzhoubl@connect.ust.hk
  ~ # WU, Sik Chit #	 20564571	scwuaa@connect.ust.hk
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_me"
            android:icon="@drawable/ic_menu_me"
            android:title="@string/menu_me" />
    </group>
</menu>